--- a/Docker个人笔记/容器架构.md
+++ b/Docker个人笔记/容器架构.md
@@ -62,3 +62,13 @@ Docker 容器就是 Docker 镜像的运行实例。
 
 用户可以通过 CLI（docker）或是 API 启动、停止、移动或删除容器。可以这么认为，对于应用软件，镜像是软件生命周期的构建和打包阶段，而容器则是启动和运行阶段。
 
+
+## Docker 组件是如何协作运行容器
+
+容器启动过程如下：
+
+    1. Docker 客户端执行 docker run 命令。
+    2. Docker Daemon 发现本地没有 hello-world 镜像。
+    3. Daemon 从 Docker Hub 下载镜像。
+    4. 下载完成，镜像 hello-world 被保存到本地。
+    5. Docker Daemon 启动容器。
