--- a/Docker个人笔记/容器架构.md
+++ b/Docker个人笔记/容器架构.md
@@ -72,3 +72,5 @@ Docker 容器就是 Docker 镜像的运行实例。
     3. Daemon 从 Docker Hub 下载镜像。
     4. 下载完成，镜像 hello-world 被保存到本地。
     5. Docker Daemon 启动容器。
+
+![Docker组建协作](/assets/Docker组建协作.png)
