--- a/Docker个人笔记/容器和镜像的基本操作.md
+++ b/Docker个人笔记/容器和镜像的基本操作.md
@@ -161,7 +161,11 @@ ba267838cc1b        ubuntu:16.04             "/bin/bash"            30 minutes a
 此外，`docker container restart`命令会将一个运行态的容器终止，然后再重新启动它。
 
 ## 进入容器
-在使用`-d`参数时，容器启动后会进入后台。某些时候需要进入容器进行操作：**exec 命令 -i -t 参数**。
+在使用`-d`参数时，容器启动后会进入后台。我们经常需要进到容器里去做一些工作，比如查看日志、调试、启动其他进程等。有两种方法进入容器：attach 和 exec。
+
+### docker exec
+
+进入容器进行操作：**exec 命令 -i -t 参数**。
 
 只用`-i`参数时，由于没有分配伪终端，界面没有我们熟悉的`Linux`命令提示符，但命令执行结果仍然可以返回。
 当`-i -t `参数一起使用时，则可以看到我们熟悉的 `Linux`命令提示符。
@@ -187,6 +191,30 @@ root@69d137adef7a:/#
 如果从这个 stdin 中 exit，不会导致容器的停止。这就是为什么推荐大家使用`docker exec`的原因。
 
 > 更多参数说明请使用`docker exec --help`查看。
+
+### docker attach
+
+通过 docker attach 可以 attach 到容器启动命令的终端。
+`注：可通过 Ctrl+p 然后 Ctrl+q 组合键退出 attach 终端`
+
+attach 与 exec 主要区别如下:
+
+- attach 直接进入容器 启动命令 的终端，不会启动新的进程。
+- exec 则是在容器中打开新的终端，并且可以启动新的进程。
+- 如果想直接在终端中查看启动命令的输出，用 attach；其他情况使用 exec。
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 ## 删除容器
