--- a/Docker个人笔记/容器和镜像的基本操作.md
+++ b/Docker个人笔记/容器和镜像的基本操作.md
@@ -201,8 +201,7 @@ attach 与 exec 主要区别如下:
 
 - attach 直接进入容器 启动命令 的终端，不会启动新的进程。
 - exec 则是在容器中打开新的终端，并且可以启动新的进程。
-- 如果想直接在终端中查看启动命令的输出，用 attach；其他情况使用 exec。
-
+- 如果想直接在终端中查看启动命令的输出，用 attach；其他情况使用 exec。当然，如果只是为了查看启动命令的输出，可以使用 docker logs 命令。
 
 ## 删除容器
 可以使用`docker container rm`来删除一个处于终止状态的容器。例如:
