--- a/Docker个人笔记/容器和镜像的基本操作.md
+++ b/Docker个人笔记/容器和镜像的基本操作.md
@@ -188,7 +188,7 @@ $ docker exec -it 69d1 bash
 root@69d137adef7a:/#
 ```
 
-如果从这个 stdin 中 exit，不会导致容器的停止。这就是为什么推荐大家使用`docker exec`的原因。
+如果从这个 stdin 中 exit，不会导致容器的停止，而docker attach则会导致容器终止!!!这就是为什么推荐大家使用`docker exec`的原因。
 
 > 更多参数说明请使用`docker exec --help`查看。
 
